// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-exports commonjs named export 1`] = `
Object {
  "named": Object {
    "Button": Object {
      "internalName": "Button",
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 1,
        },
        "start": Object {
          "column": 21,
          "line": 1,
        },
      },
      "name": "Button",
    },
  },
}
`;

exports[`extract-exports export * from import 1`] = `
Object {
  "named": Object {
    "stories.tsx": Object {
      "from": "stories.tsx",
      "internalName": "*",
      "loc": Object {
        "end": Object {
          "column": 27,
          "line": 1,
        },
        "start": Object {
          "column": 14,
          "line": 1,
        },
      },
      "name": "*",
    },
  },
}
`;

exports[`extract-exports export default class 1`] = `
Object {
  "default": Object {
    "internalName": "Button",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "name": "default",
  },
  "named": Object {},
}
`;

exports[`extract-exports export default class export 1`] = `
Object {
  "default": Object {
    "internalName": "Button",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 37,
        "line": 3,
      },
    },
    "name": "default",
  },
  "named": Object {},
}
`;

exports[`extract-exports export from import 1`] = `
Object {
  "named": Object {
    "myStory": Object {
      "from": "stories.tsx",
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 1,
        },
        "start": Object {
          "column": 9,
          "line": 1,
        },
      },
      "name": "myStory",
    },
  },
}
`;

exports[`extract-exports export from import with alias 1`] = `
Object {
  "named": Object {
    "newStory": Object {
      "from": "stories.tsx",
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 28,
          "line": 1,
        },
        "start": Object {
          "column": 20,
          "line": 1,
        },
      },
      "name": "newStory",
    },
  },
}
`;

exports[`extract-exports export named class 1`] = `
Object {
  "named": Object {
    "Button": Object {
      "internalName": "Button",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 7,
        },
        "start": Object {
          "column": 44,
          "line": 3,
        },
      },
      "name": "Button",
    },
  },
}
`;

exports[`extract-exports export named class export 1`] = `
Object {
  "named": Object {
    "Button": Object {
      "internalName": "Button",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 7,
        },
        "start": Object {
          "column": 37,
          "line": 3,
        },
      },
      "name": "Button",
    },
  },
}
`;

exports[`extract-exports named const export 1`] = `
Object {
  "named": Object {
    "myStory": Object {
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 22,
          "line": 1,
        },
      },
      "name": "myStory",
    },
  },
}
`;

exports[`extract-exports named export 1`] = `
Object {
  "default": Object {
    "internalName": "default",
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 2,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "name": "default",
  },
  "named": Object {
    "namedExport": Object {
      "internalName": "namedExport",
      "loc": Object {
        "end": Object {
          "column": 40,
          "line": 1,
        },
        "start": Object {
          "column": 33,
          "line": 1,
        },
      },
      "name": "namedExport",
    },
  },
}
`;

exports[`extract-exports named export alias 1`] = `
Object {
  "named": Object {
    "exportedStory": Object {
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 22,
          "line": 1,
        },
      },
      "name": "exportedStory",
    },
  },
}
`;

exports[`extract-exports re-exported name 1`] = `
Object {
  "named": Object {
    "myStory": Object {
      "from": "stories.tsx",
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 1,
        },
        "start": Object {
          "column": 9,
          "line": 1,
        },
      },
      "name": "myStory",
    },
  },
}
`;
